--- a/api/langs/kr.json
+++ b/api/langs/kr.json
@@ -1,4 +1,6 @@
 {
+    "Restaurants": "식당",
+    "Recent Restaurants": "최근 식당",
     "Projects": "프로젝트",
     "Msgs": "캐스트 메시지",
     "Notify": "알림",
